Code improvements, upgrade to gradle 9, upgrade to Java 21.