@@ -9,9 +9,9 @@ import static org.junit.Assert.*;
 public class LanguageUtilTest {
     @Test
     public void testGetByString(){
-        assertEquals(new Locale("en"), LanguageUtil.getLanguageByString("en"));
-        assertEquals(new Locale("pt", "BR"), LanguageUtil.getLanguageByString("pt_BR"));
-        assertEquals(new Locale("zh", "Hant", "TW"), LanguageUtil.getLanguageByString("zh_Hant_TW"));
+        assertEquals(Locale.of("en"), LanguageUtil.getLanguageByString("en"));
+        assertEquals(Locale.of("pt", "BR"), LanguageUtil.getLanguageByString("pt_BR"));
+        assertEquals(Locale.of("zh", "Hant", "TW"), LanguageUtil.getLanguageByString("zh_Hant_TW"));
 
         assertNull(LanguageUtil.getLanguageByString(null));
         assertNull(LanguageUtil.getLanguageByString(""));
